--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -6,8 +6,41 @@
   "main": {
     "greeting":"Minerals, rocks, mineral resources"
   },
+  "item": {
+    "type":"Type/level",
+    "composition":"Composition",
+    "description":"Description",
+    "in_estonia":"In Estonia",
+    "usage":"Usage",
+    "additionalInfo":"Additional info",
+    "sarv":"Find matches from the Estonian Geocollections Portal",
+    "sarvPics":"Image search",
+    "features":"Features",
+    "synonyms":"Synonyms",
+    "classification":"Classification",
+    "references":"References",
+    "localities":"Occurrences on map",
+    "typeI":"Dana mineraalide klassifikatsioon, versioon 8",
+    "typeII":"Vääriskivide klassifikatsioon",
+    "typeIII":"Mineraalide klassifikatsioon (Strunz'i baasil)",
+    "tab_overview":"Overview",
+    "tabs_specimens":"Specimens"
+  },
   "search": {
     "worldwide":"Maailm",
-    "only_estonia":"Ainult Eesti"
+    "only_estonia":"Ainult Eesti",
+    "specimen": {
+      "id": "ID",
+      "number": "Specimen number",
+      "depth_m": "Depth (m)",
+      "stratigraphy": "Stratigraphy",
+      "collector": "Collector",
+      "locality": "Locality",
+      "name_part_element": "Name Part/element",
+      "status": "Status",
+      "images": "Images",
+      "old_specimen_number": "Old nr.",
+      "lithostratigraphy": "Lithostratigraphy"
+    }
   }
 }
