style adjustments and minor translations

--- a/src/assets/locales/et.json
+++ b/src/assets/locales/et.json
@@ -1,10 +1,10 @@
 {
   "header": {
     "description":"",
-    "search":"Otsi mineraali või kivimit"
+    "search":"Search mineral or rock"
   },
   "main": {
-    "greeting":"Mineraalid, kivimid, maavarad"
+    "greeting":"Minerals, rocks, mineral resources"
   },
   "item": {
     "type":"Tüüp/tase",
@@ -24,11 +24,23 @@
     "typeII":"Vääriskivide klassifikatsioon",
     "typeIII":"Mineraalide klassifikatsioon (Strunz'i baasil)",
     "tab_overview":"Üldinfo",
-    "tabs_specimens":"Eksemplaarid"
+    "tabs_specimens":"Eksemplarid"
   },
   "search": {
-    "worldwide":"Worldwide",
-    "only_estonia":"Only Estonia"
+    "worldwide":"Maailm",
+    "only_estonia":"Ainult Eesti",
+    "specimen": {
+      "id": "ID",
+      "number": "Specimen number",
+      "depth_m": "Depth (m)",
+      "stratigraphy": "Stratigraphy",
+      "collector": "Collector",
+      "locality": "Locality",
+      "name_part_element": "Name Part/element",
+      "status": "Status",
+      "images": "Images",
+      "old_specimen_number": "Old nr.",
+      "lithostratigraphy": "Lithostratigraphy"
+    }
   }
-
 }
