--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -1,10 +1,10 @@
 {
   "header": {
     "description":"",
-    "search":"Search mineral or rock"
+    "search":"Otsi mineraali või kivimit"
   },
   "main": {
-    "greeting":"Minerals, rocks, mineral resources"
+    "greeting":"Mineraalid, kivimid, maavarad"
   },
   "item": {
     "type":"Type/level",
@@ -27,8 +27,8 @@
     "tabs_specimens":"Specimens"
   },
   "search": {
-    "worldwide":"Maailm",
-    "only_estonia":"Ainult Eesti",
+    "worldwide":"Worldwide",
+    "only_estonia":"Only Estonia",
     "specimen": {
       "id": "ID",
       "number": "Specimen number",
