--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -1,13 +1,13 @@
 {
   "header": {
     "description":"",
-    "search":"Search mineral or rock"
+    "search":"Поиск"
   },
   "main": {
-    "greeting":"Minerals, rocks, mineral resources"
+    "greeting":"Минералы, горные породы, полезные ископаемые"
   },
   "search": {
-    "worldwide":"Maailm",
-    "only_estonia":"Ainult Eesti"
+    "worldwide":"весь мир",
+    "only_estonia":"Только Эстония"
   }
 }
