--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -4,10 +4,43 @@
     "search":"Поиск"
   },
   "main": {
-    "greeting":"Минералы, горные породы, полезные ископаемые"
+    "greeting":"Минералы, горные породы, полезные ископаемые",
+    "overlay":"Страница загружается...",
+    "lastChanged":"Последние изменения в записях"
+  },
+  "item": {
+    "type":"Тип/уровень",
+    "composition":"Состав",
+    "description":"Описание",
+    "in_estonia":"В Эстонии",
+    "usage":"Предназначение",
+    "additionalInfo":"Дополнительная информация",
+    "sarv":"Найти совпадения на странице портала Estonian Geocollections",
+    "sarvPics":"Поиск по изображениям",
+    "features":"Свойства",
+    "synonyms":"Синонимы",
+    "classification":"Классификация",
+    "references":"Упоминания в литературе",
+    "localities":"Местоположение на карте",
+    "typeI":"Классификация минералов по Dana , версия 8",
+    "typeII":"Классификация драгоценных камней",
+    "typeIII":"Классификация минералов по Strunz'-у",
+    "tab_overview":"Общая информация",
+    "tabs_specimens":"Экземпляры"
   },
   "search": {
-    "worldwide":"весь мир",
-    "only_estonia":"Только Эстония"
+    "worldwide":"Весь мир",
+    "only_estonia":"Только Эстония",
+    "specimen": {
+      "id": "Ид",
+      "number": "Номер экземпляра",
+      "depth_m": "На глубине (м)",
+      "stratigraphy": "Стратиграфия",
+      "collector": "Собрал",
+      "locality": "Местонахождения",
+      "name_part_element": "Название части/элемента",
+      "status": "Статус",
+      "images": "Изображение"
+    }
   }
 }
