--- a/src/assets/locales/et.json
+++ b/src/assets/locales/et.json
@@ -5,7 +5,8 @@
   },
   "main": {
     "greeting":"Mineraalid, kivimid, maavarad",
-    "overlay":"Please wait..."
+    "overlay":"Please wait...",
+    "lastChanged":"Viimati muudetud kirjed"
   },
   "item": {
     "type":"Tüüp/tase",
@@ -39,9 +40,7 @@
       "locality": "Locality",
       "name_part_element": "Name Part/element",
       "status": "Status",
-      "images": "Images",
-      "old_specimen_number": "Old nr.",
-      "lithostratigraphy": "Lithostratigraphy"
+      "images": "Images"
     }
   }
 }
