front page translations added

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -7,8 +7,8 @@
     "greeting":"Minerals, rocks, mineral resources",
     "overlay":"Please wait...",
     "lastChanged":"Last modified records",
-    "minerals":"Mineraalid",
-    "gemstones":"Пemstones",
+    "minerals":"minerals",
+    "gemstones":"Gemstones",
     "igneousRocks":"Igneous rocks",
     "sediments":"Sediments",
     "sedimentaryRocks":"Sedimentary rocks",
