photo gallery added

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -7,7 +7,7 @@
     "greeting":"Minerals, rocks, mineral resources",
     "overlay":"Please wait...",
     "lastChanged":"Last modified records",
-    "minerals":"minerals",
+    "minerals":"Minerals",
     "gemstones":"Gemstones",
     "igneousRocks":"Igneous rocks",
     "sediments":"Sediments",
