fancybox caption added + translations

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -56,5 +56,12 @@
       "status": "Status",
       "images": "Images"
     }
+  },
+  "fancybox": {
+    "author": "Author",
+    "date": "Date",
+    "licence": "Licence",
+    "detailView": "Picture detail view"
   }
+
 }
