--- a/src/assets/locales/et.json
+++ b/src/assets/locales/et.json
@@ -54,5 +54,11 @@
       "status": "Status",
       "images": "Images"
     }
+  },
+  "fancybox": {
+    "author": "Autor",
+    "date": "Kuupäev",
+    "licence": "Litsents",
+    "detailView": "Pildi detailvaade"
   }
 }
