--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -54,5 +54,11 @@
       "status": "Статус",
       "images": "Изображение"
     }
+  },
+  "fancybox": {
+    "author": "Автор",
+    "date": "Дата",
+    "licence": "Лиценция",
+    "detailView": "Детальная информация о картинке"
   }
 }
