--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -46,6 +46,7 @@
     "worldwide":"Worldwide",
     "only_estonia":"Only Estonia",
     "only_images":"With images",
+    "per_page":"Per page",
     "specimen": {
       "id": "ID",
       "number": "Specimen number",
