--- a/src/assets/locales/et.json
+++ b/src/assets/locales/et.json
@@ -44,6 +44,7 @@
     "worldwide":"Maailm",
     "only_estonia":"Ainult Eesti",
     "only_images":"Ainult piltidega",
+    "per_page":"Per page",
     "specimen": {
       "id": "ID",
       "number": "Specimen number",
