--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -1,7 +1,10 @@
 {
   "header": {
     "description":"",
-    "search":"Поиск"
+    "search":"Поиск",
+    "mode": "Limit data:",
+    "in_estonia_mode": "Estonia",
+    "global_mode": "Global"
   },
   "main": {
     "greeting":"Минералы, горные породы, полезные ископаемые",
