--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -41,7 +41,9 @@
     "tab_overview":"Overview",
     "tabs_specimens":"Specimens",
     "minerals":"Mineral composition",
-    "mineralsByRock":"Mineral containing rocks"
+    "mineralsByRock":"Mineral containing rocks",
+    "occurs_in_estonia":"Occurs in Estonia"
+
 
 
   },
