#11 other style improvements

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -19,7 +19,9 @@
     "ores":"Ores",
     "combustibleRocks":"Combustible rocks",
     "industrialRawMaterials":"Industrial raw materials",
-    "buildingSupplies":"Building supplies"
+    "buildingSupplies":"Building supplies",
+    "searchInstructions": "Search instructions",
+    "searchResults":"Search results"
   },
   "item": {
     "type":"Type/level",
