--- a/src/assets/locales/et.json
+++ b/src/assets/locales/et.json
@@ -34,6 +34,7 @@
   },
   "item": {
     "type":"Tüüp/tase",
+    "synonymOf":"on sünonüümiks:",
     "composition":"Koostis",
     "description":"Kirjeldus",
     "in_estonia":"Eestis",
