--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -13,7 +13,7 @@
     "minerals":"Минералы",
     "gemstones":"Драгоценные камни",
     "igneousRocks":"Магматические породы",
-    "sediments":"sediments",
+    "sediments":"Осадки",
     "sedimentaryRocks":"Осадочные породы",
     "metamorphicRocks":"Метаморфические породы",
     "ores":"Руда",
@@ -99,7 +99,13 @@
     "detailView": "Детальная информация о картинке"
   },
   "footer": {
-    "licence":"Except where otherwise noted, content on this site is licensed under CC BY-NC Licence.",
+    "copyright":"Data contributors",
+    "licence1":"Content on this site is licensed under the",
+    "licence2":"Licence, if not indicated otherwise",
+    "developed1":"Developed as part of",
+    "developed2":"infrastructure and a component of",
+    "hosted1":"Hosted by the",
+    "hosted2":"Department of Geology, TalTech",
     "collections":"Geological collections in",
     "estonia":"Estonia",
     "sweden":"Sweden",
